--- a/client/src/app/components/cart/cart.component.html
+++ b/client/src/app/components/cart/cart.component.html
@@ -1,9 +1,19 @@
-<!-- cart.component.html -->
 <p-toast></p-toast>
-<section class="h-100 h-custom">
-  <div class="container h-100 ">
+<section class="cart-section">
+  <div class="container h-100">
     <h2 class="mb-4 ml-2 text-primary">Shopping Bag</h2>
-    <div class="row ml-2 d-flex justify-content-center align-items-center h-100">
+
+    
+    <div class="cart-container" [ngClass]="{'no-scroll': cartBooks.length === 0}">
+      <div *ngIf="cartBooks.length === 0" class="col-sm-12 empty-cart-cls text-center">
+        <img src="https://i.imgur.com/dCdflKN.png" width="130" height="100" class="img-fluid mb-4 mr-3">
+        <h3><strong>Your Cart is Empty</strong></h3>
+        <h4>Add something to make me happy :)</h4>
+        <a href="#" class="btn btn-primary cart-btn-transform m-3">Continue Shopping</a>
+      </div>
+    </div>
+
+    <div *ngIf="cartBooks.length > 0" class="row ml-2 d-flex justify-content-center align-items-center h-100">
       <div class="col-md-12">
         <div class="row">
           <div class="col-12 mb-4" *ngFor="let book of cartBooks">
@@ -12,32 +22,12 @@
                 <div class="d-flex align-items-center">
                   <!-- Image Section -->
                   <div class="col-md-3 d-flex flex-column align-items-center">
-                    <img
-                      [src]="book.img"
-                      class="img-fluid rounded-3 shadow-sm mb-3"
-                      alt="Book"
-                    />
+                    <img [src]="book.img" class="img-fluid rounded-3 shadow-sm mb-3" alt="Book">
                     <!-- Quantity Selector -->
                     <div class="d-flex align-items-center">
-                      <button
-                        class="btn btn-outline-secondary btn-sm"
-                       
-                      >
-                        -
-                      </button>
-                      <input
-                        type="text"
-                        class="form-control text-center mx-2"
-                        style="width: 50px"
-                        [value]="book.quantity"
-                        readonly
-                      />
-                      <button
-                        class="btn btn-outline-secondary btn-sm"
-                      
-                      >
-                        +
-                      </button>
+                      <button class="btn btn-outline-secondary btn-sm" (click)="updateQuantity(book._id, -1)">-</button>
+                      <input type="text" class="form-control text-center mx-2" style="width: 50px" [value]="book.quantity" readonly>
+                      <button class="btn btn-outline-secondary btn-sm" (click)="updateQuantity(book._id, 1)">+</button>
                     </div>
                   </div>
 
@@ -52,39 +42,18 @@
                         <th>Price</th>
                       </tr>
                       <tr>
-                        <td>
-                          <p class="text-dark mr-5">{{ book.title }}</p>
-                        </td>
-                        <td>
-                          <p class="text-dark mr-5">{{ book.author }}</p>
-                        </td>
-                        <td>
-                          <p class="text-dark mr-5">{{ book.genre }}</p>
-                        </td>
-                        <td>
-                          <p
-                         
-                            class="text-uppercase mr-5"
-                          >
-                            {{ book.availability }}
-                          </p>
-                        </td>
-                        <td>
-                          <p class="text-dark mr-5">
-                            {{ book.price * book.quantity | currency }}
-                          </p>
-                        </td>
+                        <td><p class="text-dark mr-5">{{ book.title }}</p></td>
+                        <td><p class="text-dark mr-5">{{ book.author }}</p></td>
+                        <td><p class="text-dark mr-5">{{ book.genre }}</p></td>
+                        <td><p class="text-uppercase mr-5">{{ book.availability }}</p></td>
+                        <td><p class="text-dark mr-5">{{ book.price * book.quantity | currency }}</p></td>
                       </tr>
                     </table>
 
                     <!-- Remove Item Button -->
                     <div class="row mt-3">
                       <div class="col-md-12">
-                        <button
-                          class="btn btn-outline-danger btn-sm w-100"
-                          (click)="removeFromCart(book._id)"
-                        
-                        >
+                        <button class="btn btn-outline-danger btn-sm w-100" (click)="removeFromCart(book._id)">
                           Remove Item
                         </button>
                       </div>
@@ -102,15 +71,11 @@
             <h5 class="mb-3 text-primary">Order Summary</h5>
             <div class="d-flex justify-content-between mb-2">
               <p>Subtotal</p>
-              <p class="font-weight-bold">
-                ${{ subtotal | number: "1.2-2" }}
-              </p>
+              <p class="font-weight-bold">${{ subtotal | number: "1.2-2" }}</p>
             </div>
             <div class="d-flex justify-content-between mb-2">
               <p>Shipping</p>
-              <p class="font-weight-bold">
-                ${{ shippingCost | number: "1.2-2" }}
-              </p>
+              <p class="font-weight-bold">${{ shippingCost | number: "1.2-2" }}</p>
             </div>
             <hr />
             <div class="d-flex justify-content-between fw-bold">
