--- a/client/src/app/components/books/edit-book/edit-book.component.html
+++ b/client/src/app/components/books/edit-book/edit-book.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="editBookForm" *ngIf="editBookForm">
+<form [formGroup]="editBookForm"  (ngSubmit)="onNextClick()">
   <div class="p-fluid">
     <div *ngIf="currentStep === 1">
       <div class="p-field">
@@ -217,3 +217,7 @@
     </button>
   </div>
 </form>
+
+<p-toast></p-toast>
+
+<p-confirmDialog></p-confirmDialog>
