--- a/client/src/app/components/common/notification/notification.component.html
+++ b/client/src/app/components/common/notification/notification.component.html
@@ -3,107 +3,42 @@
 </div>
 
 <div class="notification-container">
-  <div *ngIf="today.length">
-    <h3>Today</h3>
-    <div class="notification-list">
-      <div
-        *ngFor="let notification of today"
-        class="notification"
-        (mouseenter)="notification.showDelete = true"
-        (mouseleave)="notification.showDelete = false"
-      >
-        <div class="notification-header">
-          <span class="timestamp">{{
-            notification.date | date : "shortTime"
-          }}</span>
+  <div *ngFor="let notification of notifications">
+    <div
+      class="notification"
+      (mouseenter)="notification.showDelete = true"
+      (mouseleave)="notification.showDelete = false"
+    >
+      <div class="notification-header">
+        <span class="timestamp">{{ notification.date | date: 'shortTime' }}</span>
+      </div>
+      <div class="notification-type">
+        <strong>{{ notification.type }}:</strong>
+      </div>
+
+      <!-- Here we handle rendering notification.data appropriately -->
+      <div class="notification-content">
+        <div *ngIf="notification.data">
+          <div *ngIf="notification.data.message">
+            <strong>{{ notification.data.message }}</strong>
+          </div>
+          <div *ngIf="notification.data.bookName">
+            <p>Book Name: {{ notification.data.bookName }}</p>
+          </div>
         </div>
-        <div class="notification-type">
-          <strong>{{ notification.type }}:</strong>
-        </div>
-        <div class="notification-content">
-          {{ notification.content }}
-        </div>
-        <div class="notification-footer">
-          <i
-            class="pi pi-trash delete-icon"
-            [ngClass]="{ visible: notification.showDelete }"
-            (click)="
-              notification.showDelete = true;
-              deleteNotification(notification, 'today')
-            "
-            matTooltip="Delete"
-          ></i>
+        <!-- Fallback text in case data is empty -->
+        <div *ngIf="!notification.data">
+          <p>No additional information available.</p>
         </div>
       </div>
-    </div>
-  </div>
 
-  <div *ngIf="yesterday.length">
-    <h3>Yesterday</h3>
-    <div class="notification-list">
-      <div
-        *ngFor="let notification of yesterday"
-        class="notification"
-        (mouseenter)="notification.showDelete = true"
-        (mouseleave)="notification.showDelete = false"
-      >
-        <div class="notification-header">
-          <span class="timestamp">{{
-            notification.date | date : "shortTime"
-          }}</span>
-        </div>
-        <div class="notification-type">
-          <strong>{{ notification.type }}:</strong>
-        </div>
-        <div class="notification-content">
-          {{ notification.content }}
-        </div>
-        <div class="notification-footer">
-          <i
-            class="pi pi-trash delete-icon"
-            [ngClass]="{ visible: notification.showDelete }"
-            (click)="
-              notification.showDelete = true;
-              deleteNotification(notification, 'yesterday')
-            "
-            matTooltip="Delete"
-          ></i>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div *ngIf="older.length">
-    <h3>Older</h3>
-    <div class="notification-list">
-      <div
-        *ngFor="let notification of older"
-        class="notification"
-        (mouseenter)="notification.showDelete = true"
-        (mouseleave)="notification.showDelete = false"
-      >
-        <div class="notification-header">
-          <span class="timestamp">{{
-            notification.date | date : "shortTime"
-          }}</span>
-        </div>
-        <div class="notification-type">
-          <strong>{{ notification.type }}:</strong>
-        </div>
-        <div class="notification-content">
-          {{ notification.content }}
-        </div>
-        <div class="notification-footer">
-          <i
-            class="pi pi-trash delete-icon"
-            [ngClass]="{ visible: notification.showDelete }"
-            (click)="
-              notification.showDelete = true;
-              deleteNotification(notification, 'older')
-            "
-            matTooltip="Delete"
-          ></i>
-        </div>
+      <div class="notification-footer">
+        <i
+          class="pi pi-trash delete-icon"
+          [ngClass]="{ visible: notification.showDelete }"
+          (click)="deleteNotification(notification)"
+          matTooltip="Delete"
+        ></i>
       </div>
     </div>
   </div>
