--- a/client/src/app/components/common/notification/notification.component.html
+++ b/client/src/app/components/common/notification/notification.component.html
@@ -1,5 +1,5 @@
 <div class="notification-header">
-  <i class="pi pi-eye" matTooltip="Mark All As Read"></i>
+  <i class="pi pi-eye" matTooltip="Mark All As Read" (click)="markAllAsRead()"></i>
 </div>
 
 <div class="notification-container">
@@ -16,7 +16,6 @@
         <strong>{{ notification.type }}:</strong>
       </div>
 
-      <!-- Here we handle rendering notification.data appropriately -->
       <div class="notification-content">
         <div *ngIf="notification.data">
           <div *ngIf="notification.data.message">
@@ -26,7 +25,7 @@
             <p>Book Name: {{ notification.data.bookName }}</p>
           </div>
         </div>
-        <!-- Fallback text in case data is empty -->
+
         <div *ngIf="!notification.data">
           <p>No additional information available.</p>
         </div>
