--- a/client/src/app/components/partials/layout/layout.component.css
+++ b/client/src/app/components/partials/layout/layout.component.css
@@ -8,7 +8,7 @@
 
 .header {
   height: 50px;
-  background-color: #fff;
+  background-color: #F4F4F4;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
@@ -25,7 +25,7 @@
 .sidebar {
   left: 0;
   width: 200px;
-  background-color: #fff;
+  background-color: #F4F4F4;
   box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
   z-index: 100;
   height: calc(100vh - 50px);
@@ -33,7 +33,7 @@
 }
 
 .layout {
-  background-color: #f5f5f5;
+  background-color: #fff;
   overflow-y: auto;
   transition: margin-left 0.3s ease-in-out;
   height: calc(100vh - 50px);
