- changes in report component

--- a/client/src/app/components/partials/header/header.component.html
+++ b/client/src/app/components/partials/header/header.component.html
@@ -21,7 +21,7 @@
         [matTooltip]="'notification'"
         (click)="openNotificationDialog()"
       >
-      <i class="pi pi-bell text-2xl" pBadge="unreadCount" ></i>
+      <i class="pi pi-bell text-2xl" pBadge severity="danger"   [value]="unreadCount" ></i>
       </button>
     </div>
 
