--- a/client/src/app/components/partials/header/header.component.css
+++ b/client/src/app/components/partials/header/header.component.css
@@ -15,7 +15,7 @@
   border-radius: 50%;
   border: 2px solid #ddd;
   padding: 15px;
-  background-color: white;
+  /* background-color: white; */
   font-size: 30px;
   cursor: pointer;
   display: flex;
@@ -36,12 +36,12 @@
   width: 50px;
   height: 50px;
   text-align: center;
-  /* line-height: 50px; */
+  line-height: 50px;
   color: #050505 !important;
-
   border-color: #eef6ff !important;
   border-radius: 50%;
   margin: 0px 0px 0px 10px;
+  font-size: 1rem;
 }
 
 .profile-menu {
@@ -50,13 +50,13 @@
   right: 20px;
   z-index: 1000;
   width: auto;
-  background-color: #F4F4F4 !important;
+  background-color: #f4f4f4 !important;
   color: #050505;
 }
 
 .p-menu {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: #F4F4F4 !important;
+  background-color: #f4f4f4 !important;
   border-radius: 5px;
 }
 
@@ -82,33 +82,44 @@
   border-radius: 50%;
 }
 
-.p-button-danger {
+/* .p-button-danger {
   background-color: #f44336 !important;
   border-color: #f44336 !important;
-}
+} */
 
-.p-button-danger:hover {
+/* .p-button-danger:hover {
   background-color: #d32f2f !important;
   border-color: #d32f2f !important;
-}
+} */
 
-.p-button-text {
+/* .p-button-text {
   color: #6c757d !important;
-}
+} */
 
 .avatar:hover {
-  background-color: #f0f0f0;
+  /* background-color: #f0f0f0; */
   transform: scale(1.1);
 }
 
 .fa-btn:hover {
-  color: #ffffff !important;
-  background-color: #3e97ff !important;
-  border-color: #3e97ff !important;
+  color: #3e97ff !important;
+  /* background-color: #3e97ff !important;
+  border-color: #3e97ff !important; */
+  font-weight: 600 !important;
 
   transition: background-color 0.3s, transform 0.3s;
 }
 
-.fa-btn:hover {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+.fa-btn.active {
+  color: #3e97ff !important;
+  /* background-color: #3e97ff !important; */
+  border-color: #3e97ff !important;
+  font-weight: 600 !important;
+border: 0.5px solid #3e97ff !important;
+  transition: background-color 0.3s, transform 0.3s;
 }
+
+/* .fa-btn:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+} */
