--- a/client/src/app/components/books/bookmark/bookmark.component.html
+++ b/client/src/app/components/books/bookmark/bookmark.component.html
@@ -24,8 +24,75 @@
         <td mat-cell *matCellDef="let book">{{ book.author }}</td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="['title', 'author']"></tr>
-      <tr mat-row *matRowDef="let row; columns: ['title', 'author']"></tr>
+      <ng-container matColumnDef="price">
+        <th
+          mat-header-cell
+          [ngStyle]="{ 'background-color': tableHeaderBgColor }"
+          *matHeaderCellDef
+        >
+          Price
+        </th>
+        <td mat-cell *matCellDef="let book">{{ book.price |currency }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="genre">
+        <th
+          mat-header-cell
+          [ngStyle]="{ 'background-color': tableHeaderBgColor }"
+          *matHeaderCellDef
+        >
+          Genre
+        </th>
+        <td mat-cell *matCellDef="let book">{{ book.genre }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="availability">
+        <th
+          mat-header-cell
+          [ngStyle]="{ 'background-color': tableHeaderBgColor }"
+          *matHeaderCellDef
+        >
+          Availability
+        </th>
+        <td mat-cell *matCellDef="let book">
+          <span
+            class="status-badge"
+            [ngStyle]="getStatusStyle(book.inventoryStatus)"
+          >
+            {{ getStatusLabel(book.inventoryStatus) }}
+          </span>
+        </td>
+      </ng-container>
+
+
+      <ng-container matColumnDef="actions">
+        <th
+          mat-header-cell
+          [ngStyle]="{ 'background-color': tableHeaderBgColor }"
+          *matHeaderCellDef
+        >
+          Actions
+        </th>
+        <td mat-cell *matCellDef="let book">
+          <button
+            mat-button
+            class="add-to-cart-btn"
+            matTooltip="Add to Cart"
+         
+          >
+            <i class="pi pi-cart-plus"></i>
+          </button>
+          <button
+            mat-button
+            class="delete-btn"
+            matTooltip="Remove Bookmark"
+          >
+            <i class="pi pi-bookmark-fill"></i>
+          </button>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="['title', 'author', 'price' , 'genre' , 'availability' ,'actions']"></tr>
+      <tr mat-row *matRowDef="let row; columns: ['title', 'author', 'price' , 'genre' , 'availability' ,'actions']"></tr>
     </table>
   </div>
 </div>
