--- a/client/src/app/components/books/book-list/book-list.component.html
+++ b/client/src/app/components/books/book-list/book-list.component.html
@@ -252,11 +252,11 @@
                   $event.stopPropagation()
                 "
               >
-                <mat-icon *ngIf="expandedElement === element"
-                  >keyboard_arrow_up</mat-icon
+                <i *ngIf="expandedElement === element" class="pi pi-angle-double-up">
+                  </i
                 >
                 <mat-icon *ngIf="expandedElement !== element"
-                  >keyboard_arrow_down</mat-icon
+                class="pi pi-angle-double-down" ></mat-icon
                 >
               </button>
             </td>
@@ -285,51 +285,44 @@
                     "
                   >
                     <div class="action-buttons" style="margin-bottom: 15px">
-                      <section>
-                        <mat-button-toggle-group
-                          name="favoriteColor"
-                          aria-label="Favorite Color"
-                          [hideSingleSelectionIndicator]="
-                            hideSingleSelectionIndicator()
+                      <button
+                        mat-icon-button
+                        aria-label="like"
+                        matTooltip="Like"
+                      >
+                        <i
+                          class="pi"
+                          [ngClass]="
+                            element.liked
+                              ? ' pi-thumbs-up-fill'
+                              : 'pi-thumbs-up'
                           "
-                        >
-                          <mat-button-toggle
-                            value="red"
-                            (change)="onLikeDislikeChange('like', element._id)"
-                          >
-                            <button
-                              mat-icon-button
-                              aria-label="Like"
-                              matTooltip="Like"
-                            >
-                              <mat-icon>thumb_up</mat-icon>
-                            </button>
-                            <span>{{ element.likes }}</span>
-                          </mat-button-toggle>
-                          <mat-button-toggle
-                            value="green"
-                            (change)="
-                              onLikeDislikeChange('dislike', element._id)
-                            "
-                          >
-                            <button
-                              mat-icon-button
-                              aria-label="Dislike"
-                              matTooltip="Dislike"
-                            >
-                              <mat-icon>thumb_down</mat-icon>
-                            </button>
-                            <span>{{ element.dislikes }}</span>
-                          </mat-button-toggle>
-                        </mat-button-toggle-group>
-                      </section>
+                        ></i>
+                      </button>
+                      <span>{{ element.like }}</span>
+
+                      <button
+                        mat-icon-button
+                        aria-label="like"
+                        matTooltip="Dislike"
+                      >
+                        <i
+                          class="pi"
+                          [ngClass]="
+                            element.disliked
+                              ? 'pi-thumbs-down-fill'
+                              : ' pi-thumbs-down'
+                          "
+                        ></i>
+                      </button>
+                      <span>{{ element.dislike }}</span>
 
                       <button
                         mat-icon-button
                         aria-label="share"
                         matTooltip="share"
                       >
-                        <i class="fas fa-share me-2" style="color: #888"></i>
+                        <i class="pi pi-send me-2" style="color: #888"></i>
                       </button>
                       <span>{{ element.share }}</span>
 
@@ -338,7 +331,7 @@
                         aria-label="download"
                         matTooltip="download"
                       >
-                        <i class="fas fa-download me-2" style="color: #888"></i>
+                        <i class="pi pi-download me-2" style="color: #888"></i>
                       </button>
                       <span>{{ element.download }}</span>
 
@@ -354,12 +347,16 @@
                           toggleBookmark(element._id, element.bookmarked)
                         "
                       >
-                        <mat-icon>{{
-                          element.bookmarked ? "bookmark" : "bookmark_border"
-                        }}</mat-icon>
+                        <i
+                          class="pi"
+                          [ngClass]="
+                            element.bookmarked
+                              ? 'pi-bookmark'
+                              : 'pi-bookmark-fill'
+                          "
+                        ></i>
                       </button>
 
-                      <!-- book-list.component.html -->
                       <button
                         mat-icon-button
                         aria-label="cart"
@@ -368,13 +365,12 @@
                         }}"
                         (click)="toggleCart(element._id, element.cartAdded)"
                       >
-                        <mat-icon>
-                          {{
-                            element.cartAdded
-                              ? "remove_shopping_cart"
-                              : "add_shopping_cart"
-                          }}
-                        </mat-icon>
+                        <i
+                          class="pi"
+                          [ngClass]="
+                            element.cartAdded ? 'pi-cart-minus' : 'pi-cart-plus'
+                          "
+                        ></i>
                       </button>
                       <!-- <span>{{ element.download }}</span> -->
 
@@ -388,10 +384,7 @@
                           (click)="toggleCommentSection(element._id)"
                           matTooltip="Comments"
                         >
-                          <i
-                            class="far fa-comment-dots me-2"
-                            style="color: #888"
-                          ></i>
+                          <i class="pi pi-comments me-2" style="color: #888"></i>
                         </button>
                       </div>
                       <button
@@ -444,9 +437,13 @@
                                 [(ngModel)]="addedComments"
                               ></textarea>
                               <p>pls . be respectful to others</p>
-                              
-                              <p-button  icon="pi pi-send" iconPos="right" styleClass="send-button"  (click)="saveBookDetails(element._id)"></p-button>
 
+                              <p-button
+                                icon="pi pi-send"
+                                iconPos="right"
+                                styleClass="send-button"
+                                (click)="saveBookDetails(element._id)"
+                              ></p-button>
                             </div>
 
                             <div
@@ -604,15 +601,14 @@
     [resizable]="false"
   >
     @if(isEditMode){
-      <edit-book
-        [data]="selectedBook"
-        (saveBook)="onBookUpdate($event)"
-      ></edit-book>
+    <edit-book
+      [data]="selectedBook"
+      (saveBook)="onBookUpdate($event)"
+    ></edit-book>
+    } @else {
+    <add-book (saveBook)="onBookSaved($event)"></add-book>
     }
-    @else {
-      <add-book (saveBook)="onBookSaved($event)"></add-book>
-    }
-<!-- 
+    <!-- 
     <ng-template #addBookTemplate>
       <add-book (saveBook)="onBookSaved($event)"></add-book>
     </ng-template> -->
